2007-05-30  Christian W. Zuckschwerdt  <zany@triq.net>

	* Added USB discovery

2007-05-29  Christian W. Zuckschwerdt  <zany@triq.net>

	* Keep users CFLAGS by Ville Skyttäon

2007-05-27  Christian W. Zuckschwerdt  <zany@triq.net>

	* Added automatic bt channel selection

2006-07-03  Christian W. Zuckschwerdt  <zany@triq.net>

	* Removed statfs (caused problems on all but Siemens)

2006-06-12  Christian W. Zuckschwerdt  <zany@triq.net>

	* 64-bit safe printf format (Roberto Pariset)

2006-03-07  Christian W. Zuckschwerdt  <zany@triq.net>

	* added usb support (Stanislav Nikolov)
	* device/channel code cleanup

2005-09-23  Christian W. Zuckschwerdt  <zany@triq.net>

	* rewrite for multiple devices auto scanning

2005-09-15  Christian W. Zuckschwerdt  <zany@triq.net>

	* read/write flag for data buffer
	* nonblocking mode flag, blocking mode default now
	* updated to obexftp 0.10.8 and fuse 2.3

2005-06-13  Christian W. Zuckschwerdt  <zany@triq.net>

	* removed caching
	* implemented file writing support
	* updated to obexftp 0.10.3 and fuse 2.2
