@@ -8,9 +8,7 @@ AC_PROG_RANLIB
 AC_PROG_INSTALL
 
 PKG_CHECK_MODULES(FUSE,fuse)
-PKG_CHECK_MODULES(OPENOBEX,openobex)
-# PKG_CHECK_MODULES(OBEXFTP,obexftp)
-AC_CHECK_LIB(obexftp, obexftp_open, [], AC_MSG_ERROR(ObexFTP library not found))
-AC_CHECK_LIB(obexftp, obexftp_browse_bt_src, [], AC_MSG_ERROR(ObexFTP >=0.22 needed))
+#PKG_CHECK_MODULES(OPENOBEX,openobex)
+PKG_CHECK_MODULES(OBEXFTP,obexftp)
 
 AC_OUTPUT([Makefile fuse/Makefile])
