@@ -1,12 +1,10 @@
 ## Process this file with automake to produce Makefile.in
 
 AM_CFLAGS = -Wall -W -Wmissing-declarations -Wmissing-prototypes \
-		-O2 @FUSE_CFLAGS@
+		-O2 @FUSE_CFLAGS@ @OBEXFTP_CFLAGS@
 
 LDADD =				@FUSE_LIBS@ \
-				-lobexftp -lmulticobex -lbfb \
-				@OPENOBEX_LIBS@ \
-				-lbluetooth
+				@OBEXFTP_LIBS@
 
 obexfs_SOURCES =		obexfs.c
 
